# anchorplate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: anchor_dominant_note.md  bugfix_spring_reactions.md  changelog_documentation.md  contact_liftoff_guide.md  hybrid_anchor_support_modes.md  hybrid_benchmark_validity_policy.md  input_toml.md  mesh_refinement_monotonicity_update.md  notes.md  quad_backend_experimental_note.md  spring_tension_only.md  timber_advanced_roadmap.md
examples/: README.md  demo_anchor_dominant.py  demo_benchmark.py  demo_benchmark_material.py  demo_benchmark_matrix.py  demo_benchmark_springs.py  demo_foundation_patch.py  demo_foundation_patch_3d.py  demo_mesh_backend_benchmark.py  demo_mesh_convergence.py  demo_single_case.py  verify_benchmark_csv.py
examples/toml/: dual_flange_case.toml  foundation_patch_case.toml  parametric_study.toml  simple_case.toml  single_flange_balustrade.toml
src/anchorplate/: __init__.py  benchmark.py  benchmark_anchor_dominant.py  benchmark_backend.py  benchmark_material.py  benchmark_matrix.py  benchmark_validity.py  inputio.py  loading.py  mesh.py  model.py  plotting.py  postprocess.py  run_case.py  solver.py  support.py
tests/: test_anchor_dominant_benchmark.py  test_benchmark_material.py  test_benchmark_validity.py  test_equivalent_line_load.py  test_foundation_contact.py  test_hybrid_anchor_modes.py  test_import_hygiene.py  test_inputio.py  test_quad_backend.py  test_spring_reactions.py  test_spring_tension_only.py  test_support_models.py
