[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorplate-morley"
version = "0.2.0"
description = "Morley plate prototype for anchor plates with Winkler bedding, coupled line loading, and benchmark cases"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Spittelmeister / research prototype" }]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "matplotlib>=3.8,<3.11",
  "scikit-fem>=11,<13",
  "pandas>=2.2,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
anchorplate-run-case = "anchorplate.run_case:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "slow: long-running examples or convergence studies kept out of the required fast CI path",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]
